# Predictive_Engine

./: .gitignore  AGENTS.md  AGENTSREADME.md  README.md  pyproject.toml
docs/: audit.md
engine/: cli.py
engine/backtest/: metrics.py  plots.py  reporting.py  walkforward.py
engine/config/: default.yaml
engine/data/: adapters.py  lineage.py  quality.py  schema.py
engine/features/: feature_sets.py  transforms.py
engine/models/: base.py  baselines.py  linear.py  seq.py  tree.py  volatility.py
engine/portfolio/: costs.py  optimizer.py  risk.py  sizing.py
engine/regimes/: hmm.py  rule_based.py
engine/registry/: artifacts.py  model_store.py
schemas/: backtest_result.schema.json  decision.schema.json  feature_frame.schema.json  forecast.schema.json  market_data.schema.json
tests/: conftest.py  test_adapters.py  test_cli_smoke.py  test_costs_drawdown.py  test_feature_alignment.py  test_forecast_schema.py  test_import_smoke.py  test_no_lookahead.py  test_promotion_gates.py  test_quality_gates.py  test_reporting.py  test_risk_constraints.py  test_walkforward.py
